JumpScript/tests/baselines/reference/commaOperatorInvalidAssignmentType.errors.txt
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.jump(10,1): error TS2322: Type 'string' is not assignable to type 'boolean'.
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.jump(11,1): error TS2322: Type 'number' is not assignable to type 'boolean'.
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.jump(13,1): error TS2322: Type 'boolean' is not assignable to type 'number'.
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.jump(14,1): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.jump(16,1): error TS2322: Type 'boolean' is not assignable to type 'string'.
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.jump(17,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.jump (6 errors) ====
    var BOOLEAN: boolean;
    var NUMBER: number;
    var STRING: string;
    
    var resultIsBoolean: boolean
    var resultIsNumber: number
    var resultIsString: string
    
    //Expect errors when the results type is different form the second operand
    resultIsBoolean = (BOOLEAN, STRING);
    ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
    resultIsBoolean = (BOOLEAN, NUMBER);
    ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
    
    resultIsNumber = (NUMBER, BOOLEAN);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
    resultIsNumber = (NUMBER, STRING);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    resultIsString = (STRING, BOOLEAN);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
    resultIsString = (STRING, NUMBER);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    